# mim_solvers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml  result
.github/workflows/: ci.yml  nix.yml  update-flake-lock.yml
benchmarks/: CMakeLists.txt  solo12.cpp  timings.cpp  timings.hpp  ur5.cpp
bindings/: CMakeLists.txt  csqp.cpp  csqp_proxqp.cpp  ddp.cpp  fddp.cpp  main.cpp  sqp.cpp
bindings/mim_solvers/: __init__.py
bindings/utils/: callback-base.cpp  callback-base.hpp  callbacks.cpp  copyable.hpp
examples/: bench_humanoid.py  bench_solo.py  bench_ur5.py  humanoid_taichi.py  solo12.py  ur5.py  utils_solo12.py
include/mim_solvers/: csqp.hpp  csqp_hpipm.hpp  csqp_proxqp.hpp  ddp.hpp  fddp.hpp  kkt.hpp  python.hpp  sqp.hpp
include/mim_solvers/utils/: callbacks.hpp
python/: CMakeLists.txt  __init__.py  csqp.cpp  csqp.py  csqp_hpipm.cpp  csqp_proxqp.cpp  ddp.cpp  fddp.cpp  main.cpp  sqp.cpp  sqp.py  sqp_cpp.py
python/mim_solvers/: __init__.py
python/py_mim_solvers/: __init__.py  cqp.py  csqp.py  sqp.py
python/py_mim_solvers/qp_solvers/: py_osqp.py
python/py_mim_solvers/unit_tests/: clqr_problem.py  run_unit_test.py  test_clqr_convergence_all.py  test_clqr_osqp.py  test_clqr_problem.py  test_clqr_stagewise_admm.py  test_lqr_problem.py  test_taichi_sqp.py  test_ur5_csqp.py  test_ur5_sqp.py
python/qp_solvers/: py_osqp.py  qpsolvers.py  stagewise_qp.py  stagewise_qp_kkt.py
src/: csqp.cpp  csqp_hpipm.cpp  csqp_proxqp.cpp  ddp.cpp  fddp.cpp  kkt.cpp  main.cpp  sqp.cpp
src/utils/: callbacks.cpp
tests/: CMakeLists.txt  random_generator.hpp  test_solvers.cpp  test_sqp.cpp  timings.cpp
tests/factory/: constraints.cpp  constraints.hpp  model.cpp  model.hpp  point-mass.cpp  point-mass.hpp  problem.cpp  problem.hpp  solver.cpp  solver.hpp
tests/factory/crocoddyl/: action.cpp  action.hpp  activation.cpp  activation.hpp  cost.cpp  cost.hpp  impulse.cpp  impulse.hpp  pinocchio_model.cpp  pinocchio_model.hpp  state.cpp  state.hpp
tests/python/: problems.py  test_clqr_convergence_all.py  test_clqr_osqp.py  test_clqr_stagewise_admm.py  test_lqr_problem.py  test_qp_solo_all.py  test_qp_ur5_all.py  test_sqp.py  test_sqp_taichi_convergence.py  test_sqp_ur5_convergence.py  test_taichi_sqp.py  test_ur5_csqp.py  test_ur5_sqp.py
unit_tests/: csqp.py  sqp.py
