<?xml version="1.0"?>
<package format="3">
  <name>mim_solvers</name>
  <version>0.1.1</version>
  <description>Numerical solvers of the Machines in Motion Laboratory.</description>
  <maintainer email="sk8001@nyu.edu">Sébastien Kleff</maintainer>
  <author email="sk8001@nyu.edu">Sébastien Kleff</author>
  <license>BSD</license>

  <url type="website">https://github.com/machines-in-motion/mim_solvers</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>boost</depend>

  <depend>crocoddyl</depend>
  <depend>eigenpy</depend>
  <depend>example-robot-data</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
